@@ -160,6 +160,8 @@ class SusyD3PDAna : public SusyD3PDInterface
     // pileup weight for A-B (5.83/fb)
     float getPileupWeightAB();
     float getPileupWeightIL();
+    // pileup weight for A-E HCP dataset
+    float getPileupWeightAE();
     // PDF reweighting of 7TeV -> 8TeV
     float getPDFWeight8TeV();
 
@@ -301,6 +303,7 @@ class SusyD3PDAna : public SusyD3PDInterface
     //
 
     SUSYObjDef                  m_susyObj;      // SUSY object definitions
+    Root::TElectronEfficiencyCorrectionTool* m_eleMediumSFTool;
 
     TString                     m_grlFileName;  // grl file name
     Root::TGoodRunsList         m_grl;          // good runs list
@@ -311,6 +314,7 @@ class SusyD3PDAna : public SusyD3PDInterface
     Root::TPileupReweighting*   m_pileupAB3;    // pileup reweighting for 2012 A-B3 only
     Root::TPileupReweighting*   m_pileupAB;     // pileup reweighting for 2012 A-B
     Root::TPileupReweighting*   m_pileupIL;     // pileup reweighting for 2012 I,L (NOT A RANGE)
+    Root::TPileupReweighting*   m_pileupAE;     // pileup reweighting for 2012 A-H (HCP dataset)
 
     // The SUSY CrossSectionDB has its own map for retrieving xsec info, but
     // it has a lot of entries so lookup is slow.  Save our own xsec map
